--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "slack": "^11.0.2"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./src/index.js",
     "test": "jest"
   },
   "author": "",
