remove unused deps

--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.27.2",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-multipart": "^1.0.6",
     "http-proxy-middleware": "^2.0.1",
-    "jest": "^28.1.0",
-    "slack": "^11.0.2"
+    "jest": "^28.1.0"
   },
   "scripts": {
     "start": "node ./src/index.js",
